# fcitx-sunpinyin

./: CMakeLists.txt  README
debian/: changelog  control  copyright  rules  watch
kimpanel/: CMakeLists.txt
kimpanel/backend/: CMakeLists.txt  backend.c  fcitx-uoskimpanel-ui.conf.in
kimpanel/plugin/: CMakeLists.txt  kimpanelagent.cpp  kimpanelplugin.cpp  org.dde.impanel.xml
kimpanel/qimpanel/: CMakeLists.txt  kimpanelagent.cpp  main.cpp  main_controller.cpp  main_controller.h  main_model.cpp  main_model.h  my_action.cpp  org.dde.impanel.xml  qml.qrc  system_tray_menu.cpp  system_tray_menu.h  toplevel.cpp
src/: CMakeLists.txt  bus.cpp  bus.h  common.h  eim.cpp  eim.h
